.istio/4-ingress-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: ingress-gateway-configuration
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "railsevents.local"
    - "developer.railsevents.local"
    - "frontend.railsevents.local"
---
kind: VirtualService
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: rails-events-app-virtual-service
  namespace: default
spec:
  hosts:
    - "railsevents.local"
  gateways:
    - ingress-gateway-configuration
  http:
    - route:
        - destination:
            host: rails-events-app
            subset: original
---
kind: VirtualService
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: rails-events-app-canary-test-virtual-service
  namespace: default
spec:
  hosts:
    - "developer.railsevents.local"
  gateways:
    - ingress-gateway-configuration
  http:
      - route:
        - destination:
            host: rails-events-app
            subset: experimental
---
kind: VirtualService
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: rails-events-frontend-virtual-service
  namespace: default
spec:
  hosts:
    - "frontend.railsevents.local"
  gateways:
    - ingress-gateway-configuration
  http:
      - route:
        - destination:
            host: rails-events-frontend
            subset: frontend
---
kind: DestinationRule
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: rails-events-app-destination-rule
  namespace: default
spec:
  host: rails-events-app
  subsets:
    - labels:
        version: original
      name: original
    - labels:
        version: experimental
      name: experimental
  trafficPolicy:
    outlierDetection:
      maxEjectionPercent: 100
---
kind: DestinationRule
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: rails-events-frontend-destination-rule
  namespace: default
spec:
  host: rails-events-frontend
  subsets:
    - labels:
        version: frontend
      name: frontend
  trafficPolicy:
    outlierDetection:
      maxEjectionPercent: 100
---
# Bridge to ALB in production environment. Using the Istio G/w will create a Classic LB which is outdated
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: istio-ingress-alb
  namespace: istio-system
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip # Points directly to Istio Pods
    alb.ingress.kubernetes.io/healthcheck-path: /health/ready
    alb.ingress.kubernetes.io/healthcheck-port: "15021"
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: istio-ingressgateway # # service name used in the creation of the ALB in terraform/istio.tf
                port:
                  number: 80
